--- a/html/mac.html
+++ b/html/mac.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Терминал MaOS</title>
+      <title>Терминал MacOS</title>
       <link rel="stylesheet" type="text/css" href="../css/style.css">
       <link rel="stylesheet" type="text/css" href="../css/font-awesome.css">
       <link rel="shortcut icon" href="../img/fav.ico" type="image/x-icon">
@@ -16,9 +16,9 @@
          <ul>
             <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
             <li>cd - расшифровывается как "Change directory", что переводится как "сменить папку" или "перейти в другую папку".</li>
-            <li>pwd - расшифровывается как "Present working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
-            <li>mv - расшифровывается как "Make directory", что переводится как "создать папку".</li>
-            <li>mkdir - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить, переименовать или удалить файл/</li>
+            <li>pwd - расшифровывается как "Print working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
+            <li>mkdir - расшифровывается как "Make directory", что переводится как "создать папку".</li>
+            <li>mv - расшифровывается как "Move", что переводится как "переместить", "переименовать". С помощью нее можно переместить, переименовать или удалить файл/</li>
          </ul>
       </div>
       <!--footer-->
