--- a/html/git.html
+++ b/html/git.html
@@ -16,17 +16,17 @@
           <ul>
             <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
             <li>cd - расшифровывается как "Change directory", что переводится как "сменить папку" или "перейти в другую папку".</li>
-            <li>pwd - расшифровывается как "Present working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
+            <li>pwd - расшифровывается как "Print working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
             <li>mkdir - расшифровывается как "Make directory", что переводится как "создать папку".</li>
-            <li>mv - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить, переименовать или удалить файл/</li>
+            <li>mv - расшифровывается как "Move", что переводится как "переместить", "переименовать". С помощью нее можно переместить, переименовать или удалить файл/</li>
          </ul>
       </div>
       <!--footer-->
       <footer class="animated fadeIn">
          <p class="location" align="center">
-            <a href="mac.html">Вернуся на главную</a>
+            <a href="mac.html">Вернуться на главную</a>
          </p>
-         &copy; 202 4. SkyPro
+         &copy; 2024. SkyPro
       </footer>
    </body>
 </html>
